# LearnOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LearnOpenGL.sln  premake5.lua
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: LearnOpenGL.cpp
src/1_getting_started/1.3_hello_triangle/: Program.cpp
src/1_getting_started/3.2_hello_triangle_ebo/: Program.cpp
src/1_getting_started/3.3_hello_triangle_excercise_1/: Program.cpp
src/1_getting_started/3.4_hello_triangle_excercise_2/: Program.cpp
src/1_getting_started/3.4_hello_triangle_excercise_3/: Program.cpp
src/1_getting_started/4.1_shaders_vertex_color/: Program.cpp
src/1_getting_started/4.2_shaders_uniforms/: Program.cpp
src/1_getting_started/4.3_shaders_more_attributes/: Program.cpp
src/1_getting_started/4.4_shaders_shader_class/: Shader.cpp  Shader.h
src/1_getting_started/4.5_shaders_excercise_1/: Program.cpp
src/1_getting_started/4.5_shaders_excercise_1/shaders/: vertex_shader.glsl
src/1_getting_started/4.6_shaders_excercise_2/: Program.cpp  Shader.cpp  Shader.h
src/1_getting_started/4.6_shaders_excercise_2/shaders/: vertex_shader.glsl
src/1_getting_started/4.7_shaders_excercise_3/: Program.cpp
src/1_getting_started/4.7_shaders_excercise_3/shaders/: vertex_shader.glsl
src/1_getting_started/5.1_textures/: Program.cpp  Shader.cpp
src/1_getting_started/5.1_textures/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/1_getting_started/5.3_textures_excercise_1/: Program.cpp  Shader.cpp
src/1_getting_started/5.3_textures_excercise_1/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/1_getting_started/5.4_textures_excercise_2/: Program.cpp
src/1_getting_started/5.4_textures_excercise_2/shaders/: fragment_shader.glsl
src/1_getting_started/5.5_textures_excercise_3/: Program.cpp
src/1_getting_started/5.6_textures_excercise_3.1/: Program.cpp  Shader.cpp  Shader.h
src/1_getting_started/5.6_textures_excercise_3.1/shaders/: fragment_shader.glsl
src/1_getting_started/5.7_textures_excercise_4/: Program.cpp  Shader.cpp  Shader.h
src/1_getting_started/5.7_textures_excercise_4/shaders/: fragment_shader.glsl
src/1_getting_started/6.1_transformations/: Program.cpp  Shader.cpp  Shader.h
src/1_getting_started/6.2_transformations_excercise_1/: Program.cpp
src/1_getting_started/6.2_transformations_excercise_1/shaders/: vertex_shader.glsl
src/1_getting_started/6.3_transformations_excercise_2/: Program.cpp
src/1_getting_started/6.3_transformations_excercise_2/shaders/: fragment_shader.glsl
src/1_getting_started/7.1_coordinate_systems/shaders/: vertex_shader.glsl
src/1_getting_started/7.2_coordinate_systems_more_3d/: Program.cpp
src/1_getting_started/7.3_coordinate_systems_more_cubes/: Program.cpp
src/1_getting_started/7.3_coordinate_systems_more_cubes/shaders/: vertex_shader.glsl
src/1_getting_started/7.4_coordinate_systems_excercise_1/: Program.cpp  Shader.h
src/1_getting_started/7.5_coordinate_systems_excercise_2/: Program.cpp
src/1_getting_started/7.5_coordinate_systems_excercise_2/shaders/: fragment_shader.glsl
src/1_getting_started/7.6_coordinate_systems_excercise_3/: Program.cpp
src/LearnOpenGL/: Camera3D.cpp  Camera3D.h  LearnOpenGL.cpp  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  Program.cpp  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
src/LearnOpenGL/Shaders/: Fragment.glsl  FragmentShader.glsl  Vertex.glsl  VertexShader.glsl
src/getting_started/hello_window/: Program.cpp
src/glad/: glad.vcxproj  glad.vcxproj.filters
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/glfw/: glfw.cpp  glfw.vcxproj  glfw.vcxproj.filters
src/stb/: stb.vcxproj  stb.vcxproj.filters
